Update phase envelope Whitson ipynb

--- a/notebooks/phase_envelope_whitson_ex18.ipynb
+++ b/notebooks/phase_envelope_whitson_ex18.ipynb
@@ -10,7 +10,8 @@
     "import numpy as np\n",
     "\n",
     "from gibbs.models.ceos import PengRobinson78\n",
-    "from gibbs.stability_analysis import stability_test"
+    "from gibbs.stability_analysis import stability_test\n",
+    "from gibbs.mixture import Mixture"
    ]
   },
   {
@@ -22,33 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "@attr.s(auto_attribs=True)\n",
     "class WhitsonModel:\n",
-    "    z: np.ndarray\n",
-    "    P: float\n",
-    "    T: float\n",
-    "    Tc: np.ndarray\n",
-    "    Pc: np.ndarray\n",
-    "    acentric_factor: np.ndarray\n",
+    "    mixture: Mixture\n",
     "    bip: np.ndarray\n",
     "\n",
     "    @property\n",
     "    def model(self):\n",
     "        return PengRobinson78(\n",
-    "            z=self.z, \n",
-    "            Tc=self.Tc, \n",
-    "            Pc=self.Pc, \n",
-    "            acentric_factor=self.acentric_factor, \n",
+    "            mixture=self.mixture,\n",
     "            bip=self.bip\n",
     "        )\n",
     "\n",
     "    @property\n",
     "    def number_of_components(self):\n",
-    "        return len(self.z)\n",
+    "        return len(self.mixture.z)\n",
     "\n",
     "    def fugacity(self, P, T, z):\n",
     "        Z_factor = self.calculate_Z(P, T, z)\n",
@@ -63,32 +56,38 @@
     "omegas = np.array([0.0115, 0.1928, 0.4902])\n",
     "Tcs = np.array([190.556, 425.16667, 617.666667])\n",
     "Pcs = np.array([4604318.9, 3796942.8, 2.096e6])\n",
+    "mixture = Mixture(z, Tcs, Pcs, omegas)\n",
     "kijs = np.zeros((3, 3))\n",
     "P = 3.447e6\n",
     "T = 410.928\n",
     "model = WhitsonModel(\n",
-    "    z=z, \n",
-    "    P=P, \n",
-    "    T=T,\n",
-    "    Tc=Tcs,\n",
-    "    Pc=Pcs,\n",
-    "    acentric_factor=omegas, \n",
+    "    mixture=mixture,\n",
     "    bip=kijs\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/volps/Dropbox/gibbs/gibbs/stability_analysis.py:56: RuntimeWarning: divide by zero encountered in log\n",
+      "  tpd = np.sum(x * (np.log(f_x / f_z)))\n",
+      "/home/volps/Dropbox/gibbs/gibbs/stability_analysis.py:56: RuntimeWarning: invalid value encountered in multiply\n",
+      "  tpd = np.sum(x * (np.log(f_x / f_z)))\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "StabilityResult(phase_split=True, x=array([0.0318598 , 0.19053432, 0.77760588]), reduced_tpd=-0.802628306743717)"
+       "StabilityResult(phase_split=True, x=array([0.03262761, 0.19389855, 0.77347384]), reduced_tpd=-0.8026659594157612)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +147,7 @@
       "P = 2857142.8571428573 \t T = 150.0 \t phase split = False\n",
       "P = 2857142.8571428573 \t T = 175.0 \t phase split = False\n",
       "P = 2857142.8571428573 \t T = 200.0 \t phase split = False\n",
-      "P = 2857142.8571428573 \t T = 225.0 \t phase split = True\n",
+      "P = 2857142.8571428573 \t T = 225.0 \t phase split = False\n",
       "P = 2857142.8571428573 \t T = 250.0 \t phase split = True\n",
       "P = 2857142.8571428573 \t T = 275.0 \t phase split = True\n",
       "P = 2857142.8571428573 \t T = 300.0 \t phase split = True\n",
@@ -164,7 +163,7 @@
       "P = 3785714.2857142854 \t T = 175.0 \t phase split = False\n",
       "P = 3785714.2857142854 \t T = 200.0 \t phase split = False\n",
       "P = 3785714.2857142854 \t T = 225.0 \t phase split = False\n",
-      "P = 3785714.2857142854 \t T = 250.0 \t phase split = True\n",
+      "P = 3785714.2857142854 \t T = 250.0 \t phase split = False\n",
       "P = 3785714.2857142854 \t T = 275.0 \t phase split = True\n",
       "P = 3785714.2857142854 \t T = 300.0 \t phase split = True\n",
       "P = 3785714.2857142854 \t T = 325.0 \t phase split = True\n",
@@ -179,7 +178,7 @@
       "P = 4714285.714285715 \t T = 175.0 \t phase split = False\n",
       "P = 4714285.714285715 \t T = 200.0 \t phase split = False\n",
       "P = 4714285.714285715 \t T = 225.0 \t phase split = False\n",
-      "P = 4714285.714285715 \t T = 250.0 \t phase split = False\n",
+      "P = 4714285.714285715 \t T = 250.0 \t phase split = True\n",
       "P = 4714285.714285715 \t T = 275.0 \t phase split = True\n",
       "P = 4714285.714285715 \t T = 300.0 \t phase split = True\n",
       "P = 4714285.714285715 \t T = 325.0 \t phase split = True\n",
@@ -194,8 +193,8 @@
       "P = 5642857.142857143 \t T = 175.0 \t phase split = False\n",
       "P = 5642857.142857143 \t T = 200.0 \t phase split = False\n",
       "P = 5642857.142857143 \t T = 225.0 \t phase split = False\n",
-      "P = 5642857.142857143 \t T = 250.0 \t phase split = False\n",
-      "P = 5642857.142857143 \t T = 275.0 \t phase split = True\n",
+      "P = 5642857.142857143 \t T = 250.0 \t phase split = True\n",
+      "P = 5642857.142857143 \t T = 275.0 \t phase split = False\n",
       "P = 5642857.142857143 \t T = 300.0 \t phase split = True\n",
       "P = 5642857.142857143 \t T = 325.0 \t phase split = True\n",
       "P = 5642857.142857143 \t T = 350.0 \t phase split = True\n",
@@ -225,7 +224,7 @@
       "P = 7500000.0 \t T = 200.0 \t phase split = False\n",
       "P = 7500000.0 \t T = 225.0 \t phase split = False\n",
       "P = 7500000.0 \t T = 250.0 \t phase split = False\n",
-      "P = 7500000.0 \t T = 275.0 \t phase split = False\n",
+      "P = 7500000.0 \t T = 275.0 \t phase split = True\n",
       "P = 7500000.0 \t T = 300.0 \t phase split = True\n",
       "P = 7500000.0 \t T = 325.0 \t phase split = True\n",
       "P = 7500000.0 \t T = 350.0 \t phase split = True\n",
@@ -241,7 +240,7 @@
       "P = 8428571.42857143 \t T = 225.0 \t phase split = False\n",
       "P = 8428571.42857143 \t T = 250.0 \t phase split = False\n",
       "P = 8428571.42857143 \t T = 275.0 \t phase split = False\n",
-      "P = 8428571.42857143 \t T = 300.0 \t phase split = True\n",
+      "P = 8428571.42857143 \t T = 300.0 \t phase split = False\n",
       "P = 8428571.42857143 \t T = 325.0 \t phase split = True\n",
       "P = 8428571.42857143 \t T = 350.0 \t phase split = True\n",
       "P = 8428571.42857143 \t T = 375.0 \t phase split = True\n",
@@ -256,7 +255,7 @@
       "P = 9357142.857142856 \t T = 225.0 \t phase split = False\n",
       "P = 9357142.857142856 \t T = 250.0 \t phase split = False\n",
       "P = 9357142.857142856 \t T = 275.0 \t phase split = False\n",
-      "P = 9357142.857142856 \t T = 300.0 \t phase split = True\n",
+      "P = 9357142.857142856 \t T = 300.0 \t phase split = False\n",
       "P = 9357142.857142856 \t T = 325.0 \t phase split = True\n",
       "P = 9357142.857142856 \t T = 350.0 \t phase split = True\n",
       "P = 9357142.857142856 \t T = 375.0 \t phase split = True\n",
@@ -278,7 +277,7 @@
       "P = 10285714.285714285 \t T = 250.0 \t phase split = False\n",
       "P = 10285714.285714285 \t T = 275.0 \t phase split = False\n",
       "P = 10285714.285714285 \t T = 300.0 \t phase split = False\n",
-      "P = 10285714.285714285 \t T = 325.0 \t phase split = False\n",
+      "P = 10285714.285714285 \t T = 325.0 \t phase split = True\n",
       "P = 10285714.285714285 \t T = 350.0 \t phase split = True\n",
       "P = 10285714.285714285 \t T = 375.0 \t phase split = True\n",
       "P = 10285714.285714285 \t T = 400.0 \t phase split = True\n",
@@ -324,7 +323,7 @@
       "P = 13071428.57142857 \t T = 275.0 \t phase split = False\n",
       "P = 13071428.57142857 \t T = 300.0 \t phase split = False\n",
       "P = 13071428.57142857 \t T = 325.0 \t phase split = False\n",
-      "P = 13071428.57142857 \t T = 350.0 \t phase split = False\n",
+      "P = 13071428.57142857 \t T = 350.0 \t phase split = True\n",
       "P = 13071428.57142857 \t T = 375.0 \t phase split = True\n",
       "P = 13071428.57142857 \t T = 400.0 \t phase split = True\n",
       "P = 13071428.57142857 \t T = 425.0 \t phase split = True\n",
@@ -480,7 +479,7 @@
        "  False,\n",
        "  False,\n",
        "  False,\n",
-       "  True,\n",
+       "  False,\n",
        "  True,\n",
        "  True,\n",
        "  True,\n",
@@ -496,7 +495,7 @@
        "  False,\n",
        "  False,\n",
        "  False,\n",
-       "  True,\n",
+       "  False,\n",
        "  True,\n",
        "  True,\n",
        "  True,\n",
@@ -511,7 +510,6 @@
        "  False,\n",
        "  False,\n",
        "  False,\n",
-       "  False,\n",
        "  True,\n",
        "  True,\n",
        "  True,\n",
@@ -521,13 +519,14 @@
        "  True,\n",
        "  True,\n",
        "  True,\n",
-       "  False,\n",
+       "  True,\n",
        "  False,\n",
        "  False,\n",
        "  False,\n",
        "  False,\n",
        "  False,\n",
        "  True,\n",
+       "  False,\n",
        "  True,\n",
        "  True,\n",
        "  True,\n",
@@ -551,7 +550,6 @@
        "  True,\n",
        "  True,\n",
        "  True,\n",
-       "  False,\n",
        "  False,\n",
        "  False,\n",
        "  False,\n",
@@ -566,6 +564,7 @@
        "  True,\n",
        "  True,\n",
        "  True,\n",
+       "  True,\n",
        "  False,\n",
        "  False,\n",
        "  False,\n",
@@ -573,7 +572,7 @@
        "  False,\n",
        "  False,\n",
        "  False,\n",
-       "  True,\n",
+       "  False,\n",
        "  True,\n",
        "  True,\n",
        "  True,\n",
@@ -588,14 +587,13 @@
        "  False,\n",
        "  False,\n",
        "  False,\n",
-       "  True,\n",
+       "  False,\n",
        "  True,\n",
        "  True,\n",
        "  True,\n",
        "  True,\n",
        "  True,\n",
        "  True,\n",
-       "  False,\n",
        "  False,\n",
        "  False,\n",
        "  False,\n",
@@ -610,6 +608,7 @@
        "  True,\n",
        "  True,\n",
        "  True,\n",
+       "  True,\n",
        "  False,\n",
        "  False,\n",
        "  False,\n",
@@ -650,7 +649,7 @@
        "  False,\n",
        "  False,\n",
        "  False,\n",
-       "  False,\n",
+       "  True,\n",
        "  True,\n",
        "  True,\n",
        "  True,\n",
@@ -674,7 +673,7 @@
        "  False]}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.7"
   },
   "toc": {
    "base_numbering": 1,
