Separate Peng-Robinson from PR78, add several improvements to Equilibrium

--- a/notebooks/nichita_equilibrium_cases.ipynb
+++ b/notebooks/nichita_equilibrium_cases.ipynb
@@ -11,7 +11,7 @@
     "from thermo import Chemical\n",
     "import warnings\n",
     "\n",
-    "from gibbs.models.ceos import PengRobinson78, SoaveRedlichKwong\n",
+    "from gibbs.models.ceos import PengRobinson, SoaveRedlichKwong\n",
     "from gibbs.mixture import Mixture\n",
     "from gibbs.stability_analysis import stability_test\n",
     "from gibbs.equilibrium import calculate_equilibrium\n",
@@ -33,7 +33,7 @@
     "\n",
     "    @property\n",
     "    def model(self):\n",
-    "        return PengRobinson78(\n",
+    "        return PengRobinson(\n",
     "            mixture=self.mixture,\n",
     "            bip=self.bip\n",
     "        )\n",
@@ -86,7 +86,6 @@
    "outputs": [],
    "source": [
     "z = np.array([0.6883, 0.0914, 0.0460, 0.0333, 0.0139, 0.0152, 0.0896, 0.0222])\n",
-    "z = z / z.sum()\n",
     "omegas = np.array([methane.omega, ethane.omega, propane.omega, nbutane.omega, npentane.omega, nhexane.omega, 0.4019, 0.7987])\n",
     "Tcs = np.array([methane.Tc, ethane.Tc, propane.Tc, nbutane.Tc, npentane.Tc, nhexane.Tc, 606.28, 825.67])\n",
     "Pcs = np.array([methane.Pc, ethane.Pc, propane.Pc, nbutane.Pc, npentane.Pc, nhexane.Pc, convert_atm_to_Pa(25.42), convert_atm_to_Pa(14.39)])\n",
@@ -113,10 +112,13 @@
     {
      "data": {
       "text/plain": [
-       "(array([[0.63435268, 0.08998372, 0.0481542 , 0.0364714 , 0.01572659,\n",
-       "         0.01769532, 0.11831023, 0.03930586],\n",
-       "        [0.72511269, 0.09237876, 0.04454236, 0.03114829, 0.01265982,\n",
-       "         0.01350514, 0.07008526, 0.01056767]]), array(15.21351493))"
+       "(array([[0.72749981, 0.09232553, 0.04438932, 0.03055919, 0.01228681,\n",
+       "         0.01388148, 0.06909989, 0.00995797],\n",
+       "        [0.63821046, 0.09023451, 0.04807507, 0.03682079, 0.01597097,\n",
+       "         0.01689356, 0.11589764, 0.037897  ]]),\n",
+       " array([0.56169476, 0.43820524]),\n",
+       " 15.212011247708197,\n",
+       " 38.5)"
       ]
      },
      "execution_count": 5,
@@ -128,23 +130,23 @@
     "T = 353\n",
     "P = convert_bar_to_Pa(385)\n",
     "\n",
-    "x_sol, reduced_gibbs = calculate_equilibrium(model, P, T, z, number_of_trial_phases=2, workers=-1)\n",
+    "x_sol, phase_fractions, reduced_gibbs = calculate_equilibrium(model, P, T, z, molar_base=1, number_of_trial_phases=2, workers=-1)\n",
     "\n",
-    "x_sol, reduced_gibbs"
+    "x_sol, phase_fractions, reduced_gibbs, P / 1e6"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Three-phase vapor-liquid-liquid equilibria"
+    "## Three-phase vapor-liquid-liquid equilibria"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Case 4.3.1"
+    "### Case 4.3.1: Ternary mixture C$_1$/nC$_{16}$/CO$_2$"
    ]
   },
   {
@@ -154,7 +156,7 @@
    "outputs": [],
    "source": [
     "nhexadecane = Chemical('n-hexadecane')\n",
-    "carbon_dioxide = Chemical('CO2')"
+    "carbon_dioxide = Chemical('carbon-dioxide')"
    ]
   },
   {
@@ -188,9 +190,11 @@
     {
      "data": {
       "text/plain": [
-       "(array([[2.79121327e-02, 3.64254579e-01, 6.07833289e-01],\n",
-       "        [7.63063204e-02, 3.89572402e-05, 9.23654722e-01],\n",
-       "        [3.76539471e-02, 3.22115063e-03, 9.59124902e-01]]), array(14.2454064))"
+       "(array([[2.72362691e-02, 3.62256609e-01, 6.10507122e-01],\n",
+       "        [7.68878611e-02, 8.87463642e-05, 9.23023393e-01],\n",
+       "        [3.67580709e-02, 2.99204204e-03, 9.60249887e-01]]),\n",
+       " array([0.13376808, 0.36171737, 0.50451455]),\n",
+       " 14.245426584043965)"
       ]
      },
      "execution_count": 8,
@@ -202,9 +206,9 @@
     "T = 294.3\n",
     "P = convert_bar_to_Pa(67)\n",
     "\n",
-    "x_sol, reduced_gibbs = calculate_equilibrium(model, P, T, z, number_of_trial_phases=3, workers=-1)\n",
+    "x_sol, phase_fractions, reduced_gibbs = calculate_equilibrium(model, P, T, z, molar_base=1, number_of_trial_phases=3, workers=-1)\n",
     "\n",
-    "x_sol, reduced_gibbs"
+    "x_sol, phase_fractions, reduced_gibbs"
    ]
   }
  ],
