Improve DE parameters and add module docstring

--- a/notebooks/nichita_equilibrium_cases.ipynb
+++ b/notebooks/nichita_equilibrium_cases.ipynb
@@ -112,13 +112,12 @@
     {
      "data": {
       "text/plain": [
-       "(array([[0.72749981, 0.09232553, 0.04438932, 0.03055919, 0.01228681,\n",
-       "         0.01388148, 0.06909989, 0.00995797],\n",
-       "        [0.63821046, 0.09023451, 0.04807507, 0.03682079, 0.01597097,\n",
-       "         0.01689356, 0.11589764, 0.037897  ]]),\n",
-       " array([0.56169476, 0.43820524]),\n",
-       " 15.212011247708197,\n",
-       " 38.5)"
+       "(array([[0.63952755, 0.09028968, 0.04807383, 0.03628065, 0.01561887,\n",
+       "         0.0175168 , 0.11562341, 0.0370692 ],\n",
+       "        [0.72946208, 0.09235101, 0.04426363, 0.03079833, 0.01245636,\n",
+       "         0.01325353, 0.06772136, 0.00969369]]),\n",
+       " array([0.45687831, 0.54302169]),\n",
+       " array(15.21199311))"
       ]
      },
      "execution_count": 5,
@@ -132,7 +131,7 @@
     "\n",
     "x_sol, phase_fractions, reduced_gibbs = calculate_equilibrium(model, P, T, z, molar_base=1, number_of_trial_phases=2, workers=-1)\n",
     "\n",
-    "x_sol, phase_fractions, reduced_gibbs, P / 1e6"
+    "x_sol, phase_fractions, reduced_gibbs"
    ]
   },
   {
@@ -190,11 +189,11 @@
     {
      "data": {
       "text/plain": [
-       "(array([[2.72362691e-02, 3.62256609e-01, 6.10507122e-01],\n",
-       "        [7.68878611e-02, 8.87463642e-05, 9.23023393e-01],\n",
-       "        [3.67580709e-02, 2.99204204e-03, 9.60249887e-01]]),\n",
-       " array([0.13376808, 0.36171737, 0.50451455]),\n",
-       " 14.245426584043965)"
+       "(array([[2.79799046e-02, 3.64208812e-01, 6.07811283e-01],\n",
+       "        [3.77833027e-02, 3.20443058e-03, 9.59012267e-01],\n",
+       "        [7.64576432e-02, 3.96794736e-05, 9.23502677e-01]]),\n",
+       " array([0.13269013, 0.51778843, 0.34952145]),\n",
+       " 14.245406229449376)"
       ]
      },
      "execution_count": 8,
