[WIP] Add auto-detecting phase formations in equilibria

--- a/notebooks/nichita_equilibrium_cases.ipynb
+++ b/notebooks/nichita_equilibrium_cases.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,32 +106,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[0.7275007 , 0.09232668, 0.04438412, 0.03094134, 0.01255415,\n",
-       "         0.01336584, 0.06882262, 0.01010456],\n",
-       "        [0.63764693, 0.09021985, 0.04810503, 0.0363649 , 0.01564765,\n",
-       "         0.0175809 , 0.11655179, 0.03788296]]),\n",
-       " array([0.56443748, 0.43546252]),\n",
-       " array(15.21199233))"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "T = 353\n",
     "P = convert_bar_to_Pa(385)\n",
     "\n",
-    "x_sol, phase_fractions, reduced_gibbs = calculate_equilibrium(model, P, T, z, molar_base=1, number_of_trial_phases=2, workers=-1)\n",
+    "result = calculate_equilibrium(model, P, T, z, molar_base=1, number_of_trial_phases=2, workers=-1, compare_trial_phases=False)\n",
     "\n",
-    "x_sol, phase_fractions, reduced_gibbs"
+    "result.X, result.F, result.reduced_gibbs_free_energy"
    ]
   },
   {
@@ -150,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,31 +168,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[2.79803392e-02, 3.64206483e-01, 6.07813177e-01],\n",
-       "        [3.77887329e-02, 3.20418096e-03, 9.59007086e-01],\n",
-       "        [7.64536048e-02, 3.97473704e-05, 9.23506648e-01]]),\n",
-       " array([0.13269095, 0.5178251 , 0.34948395]),\n",
-       " array(14.24540623))"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "T = 294.3\n",
     "P = convert_bar_to_Pa(67)\n",
     "\n",
-    "x_sol, phase_fractions, reduced_gibbs = calculate_equilibrium(model, P, T, z, molar_base=1, number_of_trial_phases=3, workers=-1)\n",
+    "result = calculate_equilibrium(model, P, T, z, molar_base=1, number_of_trial_phases=3, workers=-1)\n",
     "\n",
-    "x_sol, phase_fractions, reduced_gibbs"
+    "result.X, result.F, result.reduced_gibbs_free_energy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "number_of_intervals = 9\n",
+    "P_range = np.linspace(convert_bar_to_Pa(62), convert_bar_to_Pa(72), number_of_intervals)\n",
+    "\n",
+    "F_results = np.array([])\n",
+    "for P in P_range:\n",
+    "    print(f\"-> Pressure = {P / 1e6} MPa\")\n",
+    "    result = calculate_equilibrium(model, P, T, z, molar_base=1, number_of_trial_phases=3, compare_trial_phases=True, workers=-1)\n",
+    "    F_results = np.append(F_results, result.F)\n",
+    "    print(f\"{result.F}\")"
    ]
   }
  ],
