[WIP] Update ipynb equilibrium

--- a/notebooks/nichita_equilibrium_cases.ipynb
+++ b/notebooks/nichita_equilibrium_cases.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,9 +106,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[0.63883771, 0.09026987, 0.04805661, 0.03626643, 0.01566856,\n",
+       "         0.01757364, 0.11596485, 0.03736234],\n",
+       "        [0.72895376, 0.09234264, 0.04432322, 0.03087542, 0.0124534 ,\n",
+       "         0.01325785, 0.06801342, 0.00978029]]),\n",
+       " array([0.45031783, 0.54958217]),\n",
+       " array(15.21199279))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# NBVAL_IGNORE_OUTPUT\n",
     "T = 353\n",
@@ -135,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,9 +184,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[4.93204185e-02, 2.97175437e-03, 9.47707827e-01],\n",
+       "        [8.20517447e-02, 9.80671124e-05, 9.17850188e-01],\n",
+       "        [3.07412624e-02, 3.63209638e-01, 6.06049100e-01]]),\n",
+       " array([0.77339581, 0.09529624, 0.13130795]),\n",
+       " 14.24645804708375)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# NBVAL_IGNORE_OUTPUT\n",
     "T = 294.3\n",
@@ -183,11 +214,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-> Pressure = 6.2 MPa\n",
+      "[0.13132727 0.86867273]\n",
+      "-> Pressure = 6.325 MPa\n",
+      "[0.86596144 0.13403856]\n",
+      "-> Pressure = 6.45 MPa\n",
+      "[0.86342632 0.13657368]\n",
+      "-> Pressure = 6.575 MPa\n",
+      "[0.13387615 0.54549767 0.32062618]\n",
+      "-> Pressure = 6.7 MPa\n",
+      "[0.13269201 0.51777614 0.34953185]\n",
+      "-> Pressure = 6.825 MPa\n",
+      "[0.67872102 0.18942401 0.13185496]\n",
+      "-> Pressure = 6.95 MPa\n",
+      "[0.86894379 0.13105621]\n",
+      "-> Pressure = 7.075 MPa\n",
+      "[0.13109469 0.86890531]\n",
+      "-> Pressure = 7.2 MPa\n",
+      "[0.13116526 0.86883474]\n"
+     ]
+    }
+   ],
    "source": [
     "number_of_intervals = 9\n",
     "P_range = np.linspace(convert_bar_to_Pa(62), convert_bar_to_Pa(72), number_of_intervals)\n",
