Fix Gibbs minimization compatibility with pygmo

--- a/notebooks/nichita_equilibrium_cases.ipynb
+++ b/notebooks/nichita_equilibrium_cases.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,15 +106,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[0.7267614 , 0.09215984, 0.04435006, 0.03103658, 0.01263784,\n",
+       "         0.01341062, 0.06933894, 0.01030471],\n",
+       "        [0.63688869, 0.09040254, 0.04822315, 0.03634278, 0.01559567,\n",
+       "         0.01760292, 0.1167888 , 0.03815546]]),\n",
+       " array([0.57275449, 0.42714551]),\n",
+       " array([15.21199309]))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# NBVAL_SKIP\n",
     "T = 353\n",
     "P = convert_bar_to_Pa(385)\n",
     "\n",
-    "result = calculate_equilibrium(model, P, T, z, molar_base=1, number_of_trial_phases=2, workers=-1, compare_trial_phases=False)\n",
+    "result = calculate_equilibrium(model, P, T, z, molar_base=1., number_of_trial_phases=2, compare_trial_phases=False)\n",
     "\n",
     "result.X, result.F, result.reduced_gibbs_free_energy"
    ]
@@ -135,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,20 +184,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[3.77832365e-02, 3.20442358e-03, 9.59012340e-01],\n",
-       "        [7.64576597e-02, 3.96816762e-05, 9.23502659e-01],\n",
-       "        [2.79799743e-02, 3.64208774e-01, 6.07811252e-01]]),\n",
-       " array([0.51778789, 0.34952195, 0.13269016]),\n",
-       " 14.24540622944931)"
+       "(array([[2.80857119e-02, 3.64014426e-01, 6.07899863e-01],\n",
+       "        [7.64978029e-02, 3.94048517e-05, 9.23462792e-01],\n",
+       "        [3.78733354e-02, 3.20579590e-03, 9.58920869e-01]]),\n",
+       " array([0.13274307, 0.34760101, 0.51965593]),\n",
+       " array([14.24540631]))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
