Update notebooks and stability tolerances

--- a/notebooks/nichita_equilibrium_cases.ipynb
+++ b/notebooks/nichita_equilibrium_cases.ipynb
@@ -11,8 +11,8 @@
     "from thermo import Chemical\n",
     "import warnings\n",
     "\n",
-    "from gibbs.models.ceos import PengRobinson, SoaveRedlichKwong\n",
-    "from gibbs.mixture import Mixture\n",
+    "from gibbs.cpp_wrapper import PengRobinson, SoaveRedlichKwong\n",
+    "from gibbs.cpp_wrapper import Mixture\n",
     "from gibbs.stability_analysis import stability_test\n",
     "from gibbs.equilibrium import calculate_equilibrium\n",
     "from gibbs.utilities import convert_bar_to_Pa, convert_atm_to_Pa\n",
@@ -112,12 +112,12 @@
     {
      "data": {
       "text/plain": [
-       "(array([[0.7267614 , 0.09215984, 0.04435006, 0.03103658, 0.01263784,\n",
-       "         0.01341062, 0.06933894, 0.01030471],\n",
-       "        [0.63688869, 0.09040254, 0.04822315, 0.03634278, 0.01559567,\n",
-       "         0.01760292, 0.1167888 , 0.03815546]]),\n",
-       " array([0.57275449, 0.42714551]),\n",
-       " array([15.21199309]))"
+       "(array([[0.61803641, 0.08741207, 0.05235657, 0.03451099, 0.01327522,\n",
+       "         0.01416555, 0.13881051, 0.04143269],\n",
+       "        [0.75083846, 0.09495936, 0.04036275, 0.03223068, 0.01445756,\n",
+       "         0.01612167, 0.04590789, 0.00512162]]),\n",
+       " array([0.47034949, 0.52955051]),\n",
+       " array([15.21954595]))"
       ]
      },
      "execution_count": 5,
@@ -190,11 +190,11 @@
     {
      "data": {
       "text/plain": [
-       "(array([[2.80857119e-02, 3.64014426e-01, 6.07899863e-01],\n",
-       "        [7.64978029e-02, 3.94048517e-05, 9.23462792e-01],\n",
-       "        [3.78733354e-02, 3.20579590e-03, 9.58920869e-01]]),\n",
-       " array([0.13274307, 0.34760101, 0.51965593]),\n",
-       " array([14.24540631]))"
+       "(array([[0.04940445, 0.00476048, 0.94583508],\n",
+       "        [0.03028617, 0.53433974, 0.43537409],\n",
+       "        [0.11895538, 0.48424637, 0.39679825]]),\n",
+       " array([0.91214751, 0.06219373, 0.02565876]),\n",
+       " array([14.26485828]))"
       ]
      },
      "execution_count": 8,
