--- a/notebooks/phase_stability.ipynb
+++ b/notebooks/phase_stability.ipynb
@@ -34,8 +34,7 @@
     "import numpy as np\n",
     "import warnings\n",
     "\n",
-    "from gibbs.models.ceos import PengRobinson78\n",
-    "from gibbs.mixture import Mixture\n",
+    "from gibbs.cpp_wrapper import PengRobinson78, Mixture\n",
     "from gibbs.stability_analysis import stability_test\n",
     "\n",
     "warnings.filterwarnings('ignore')"
@@ -68,7 +67,7 @@
     "            z=self.z, \n",
     "            Tc=self.Tc, \n",
     "            Pc=self.Pc, \n",
-    "            acentric_factor=self.acentric_factor\n",
+    "            omega=self.acentric_factor\n",
     "        )\n",
     "\n",
     "    @property\n",
@@ -164,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.7"
   },
   "toc": {
    "base_numbering": 1,
