Update import in the ipynbs

--- a/notebooks/nichita-stability-cases-paper.ipynb
+++ b/notebooks/nichita-stability-cases-paper.ipynb
@@ -11,7 +11,8 @@
     "from thermo import Chemical\n",
     "import warnings\n",
     "\n",
-    "from gibbs.cpp_wrapper import PengRobinson78, SoaveRedlichKwong, Mixture\n",
+    "from gibbs.models.ceos import PengRobinson78, SoaveRedlichKwong\n",
+    "from gibbs.mixture import Mixture\n",
     "from gibbs.stability_analysis import stability_test\n",
     "from gibbs.utilities import convert_bar_to_Pa\n",
     "\n",
