--- a/notebooks/phase_stability.ipynb
+++ b/notebooks/phase_stability.ipynb
@@ -34,7 +34,8 @@
     "import numpy as np\n",
     "import warnings\n",
     "\n",
-    "from gibbs.cpp_wrapper import PengRobinson78, Mixture\n",
+    "from gibbs.models.ceos import PengRobinson78\n",
+    "from gibbs.mixture import Mixture\n",
     "from gibbs.stability_analysis import stability_test\n",
     "\n",
     "warnings.filterwarnings('ignore')"
