--- a/notebooks/nichita_equilibrium_cases.ipynb
+++ b/notebooks/nichita_equilibrium_cases.ipynb
@@ -11,8 +11,8 @@
     "from thermo import Chemical\n",
     "import warnings\n",
     "\n",
-    "from gibbs.cpp_wrapper import PengRobinson, SoaveRedlichKwong\n",
-    "from gibbs.cpp_wrapper import Mixture\n",
+    "from gibbs.models.ceos import PengRobinson, SoaveRedlichKwong\n",
+    "from gibbs.mixture import Mixture\n",
     "from gibbs.stability_analysis import stability_test\n",
     "from gibbs.equilibrium import calculate_equilibrium\n",
     "from gibbs.utilities import convert_bar_to_Pa, convert_atm_to_Pa\n",
@@ -112,12 +112,12 @@
     {
      "data": {
       "text/plain": [
-       "(array([[0.61803641, 0.08741207, 0.05235657, 0.03451099, 0.01327522,\n",
-       "         0.01416555, 0.13881051, 0.04143269],\n",
-       "        [0.75083846, 0.09495936, 0.04036275, 0.03223068, 0.01445756,\n",
-       "         0.01612167, 0.04590789, 0.00512162]]),\n",
-       " array([0.47034949, 0.52955051]),\n",
-       " array([15.21954595]))"
+       "(array([[0.70437366, 0.08830556, 0.05113043, 0.03245078, 0.01438586,\n",
+       "         0.01463366, 0.07534094, 0.01937911],\n",
+       "        [0.5773677 , 0.11293395, 0.01045449, 0.03921616, 0.01054134,\n",
+       "         0.01913992, 0.18856457, 0.04178187]]),\n",
+       " array([0.87389628, 0.12600372]),\n",
+       " array([15.22287506]))"
       ]
      },
      "execution_count": 5,
@@ -190,11 +190,11 @@
     {
      "data": {
       "text/plain": [
-       "(array([[0.04940445, 0.00476048, 0.94583508],\n",
-       "        [0.03028617, 0.53433974, 0.43537409],\n",
-       "        [0.11895538, 0.48424637, 0.39679825]]),\n",
-       " array([0.91214751, 0.06219373, 0.02565876]),\n",
-       " array([14.26485828]))"
+       "(array([[5.74402419e-02, 3.21294719e-01, 6.21265039e-01],\n",
+       "        [3.23020300e-02, 2.44520391e-04, 9.67453450e-01],\n",
+       "        [5.91766292e-02, 1.05137100e-03, 9.39772000e-01]]),\n",
+       " array([0.15368352, 0.33153146, 0.51478502]),\n",
+       " array([14.26219514]))"
       ]
      },
      "execution_count": 8,
